--- a/register.html
+++ b/register.html
@@ -80,13 +80,13 @@
     </nav>
     <div class="container">
         <div class="row justify-content-center">
-          <div class="col-sm-10 col-md-7 ">
+          <div class=" mt-3 mb-3 col-sm-10 col-md-7 bg-primary bg-opacity-50 p-2 rounded-3">
             <div  class="d-flex justify-content-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
                     <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
                     <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
                   </svg>
-            </div class="row ">
+            </div class="col">
             <form >
                 <div  class="mb-3 mt-3">
                     <label for="formGroupExampleInput" class="form-label">
@@ -138,7 +138,7 @@
               </form>
           </div>         
         </div>
-    </div>>
+    </div>
       <footer class="bg-primary text-light p-4 text-center">
         ©
         <script>
